--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   menu_bar: ^0.5.3
+  flutter_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
