--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   menu_bar: ^0.5.3
   flutter_riverpod: ^2.4.9
+  flutter_fancy_tree_view: ^1.4.1
 
 dev_dependencies:
   flutter_test:
