--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   menu_bar: ^0.5.3
   flutter_riverpod: ^2.4.9
   flutter_fancy_tree_view: ^1.4.1
+  git: ^2.2.1
+  diff_match_patch: ^0.4.1
 
 dev_dependencies:
   flutter_test:
